build/log/idf_py_stdout_output_226873
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/atli/Documents/Esp32/Esp32_main/build/bootloader/esp-idf/esptool_py && /home/atli/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/atli/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/atli/Documents/Esp32/Esp32_main/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/atli/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/atli/Documents/Esp32/Esp32_main/build/config -I/home/atli/Documents/Esp32/Esp32_main/main -I/home/atli/esp/esp-idf/components/newlib/platform_include -I/home/atli/esp/esp-idf/components/freertos/config/include -I/home/atli/esp/esp-idf/components/freertos/config/include/freertos -I/home/atli/esp/esp-idf/components/freertos/config/xtensa/include -I/home/atli/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/atli/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/atli/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/atli/esp/esp-idf/components/freertos/esp_additions/include -I/home/atli/esp/esp-idf/components/esp_hw_support/include -I/home/atli/esp/esp-idf/components/esp_hw_support/include/soc -I/home/atli/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/atli/esp/esp-idf/components/esp_hw_support/dma/include -I/home/atli/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/atli/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/atli/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/atli/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/atli/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/atli/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/atli/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/atli/esp/esp-idf/components/heap/include -I/home/atli/esp/esp-idf/components/heap/tlsf -I/home/atli/esp/esp-idf/components/log/include -I/home/atli/esp/esp-idf/components/soc/include -I/home/atli/esp/esp-idf/components/soc/esp32 -I/home/atli/esp/esp-idf/components/soc/esp32/include -I/home/atli/esp/esp-idf/components/soc/esp32/register -I/home/atli/esp/esp-idf/components/hal/platform_port/include -I/home/atli/esp/esp-idf/components/hal/esp32/include -I/home/atli/esp/esp-idf/components/hal/include -I/home/atli/esp/esp-idf/components/esp_rom/include -I/home/atli/esp/esp-idf/components/esp_rom/esp32/include -I/home/atli/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/atli/esp/esp-idf/components/esp_rom/esp32 -I/home/atli/esp/esp-idf/components/esp_common/include -I/home/atli/esp/esp-idf/components/esp_system/include -I/home/atli/esp/esp-idf/components/esp_system/port/soc -I/home/atli/esp/esp-idf/components/esp_system/port/include/private -I/home/atli/esp/esp-idf/components/xtensa/esp32/include -I/home/atli/esp/esp-idf/components/xtensa/include -I/home/atli/esp/esp-idf/components/xtensa/deprecated_include -I/home/atli/esp/esp-idf/components/lwip/include -I/home/atli/esp/esp-idf/components/lwip/include/apps -I/home/atli/esp/esp-idf/components/lwip/include/apps/sntp -I/home/atli/esp/esp-idf/components/lwip/lwip/src/include -I/home/atli/esp/esp-idf/components/lwip/port/include -I/home/atli/esp/esp-idf/components/lwip/port/freertos/include -I/home/atli/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/atli/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/atli/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/atli/Documents/Esp32/Esp32_main/components/sensor_manager/include -I/home/atli/esp/esp-idf/components/driver/deprecated -I/home/atli/esp/esp-idf/components/driver/i2c/include -I/home/atli/esp/esp-idf/components/driver/touch_sensor/include -I/home/atli/esp/esp-idf/components/driver/twai/include -I/home/atli/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/atli/esp/esp-idf/components/esp_pm/include -I/home/atli/esp/esp-idf/components/esp_ringbuf/include -I/home/atli/esp/esp-idf/components/esp_driver_gpio/include -I/home/atli/esp/esp-idf/components/esp_driver_pcnt/include -I/home/atli/esp/esp-idf/components/esp_driver_gptimer/include -I/home/atli/esp/esp-idf/components/esp_driver_spi/include -I/home/atli/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/atli/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/atli/esp/esp-idf/components/esp_driver_i2s/include -I/home/atli/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/atli/esp/esp-idf/components/sdmmc/include -I/home/atli/esp/esp-idf/components/esp_driver_sdspi/include -I/home/atli/esp/esp-idf/components/esp_driver_sdio/include -I/home/atli/esp/esp-idf/components/esp_driver_dac/include -I/home/atli/esp/esp-idf/components/esp_driver_rmt/include -I/home/atli/esp/esp-idf/components/esp_driver_tsens/include -I/home/atli/esp/esp-idf/components/esp_driver_sdm/include -I/home/atli/esp/esp-idf/components/esp_driver_i2c/include -I/home/atli/esp/esp-idf/components/esp_driver_uart/include -I/home/atli/esp/esp-idf/components/vfs/include -I/home/atli/esp/esp-idf/components/esp_driver_ledc/include -I/home/atli/esp/esp-idf/components/esp_driver_parlio/include -I/home/atli/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/atli/esp/esp-idf/components/esp_driver_twai/include -I/home/atli/Documents/Esp32/Esp32_main/components/sht31/include -I/home/atli/Documents/Esp32/Esp32_main/components/bmp280/include -I/home/atli/Documents/Esp32/Esp32_main/components/wifi_manager/include -I/home/atli/esp/esp-idf/components/nvs_flash/include -I/home/atli/esp/esp-idf/components/esp_partition/include -I/home/atli/esp/esp-idf/components/esp_wifi/include -I/home/atli/esp/esp-idf/components/esp_wifi/include/local -I/home/atli/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/atli/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/atli/esp/esp-idf/components/esp_event/include -I/home/atli/esp/esp-idf/components/esp_phy/include -I/home/atli/esp/esp-idf/components/esp_phy/esp32/include -I/home/atli/esp/esp-idf/components/esp_netif/include -I/home/atli/esp/esp-idf/components/esp_timer/include -I/home/atli/Documents/Esp32/Esp32_main/components/http_client/include -I/home/atli/esp/esp-idf/components/esp_http_client/include -I/home/atli/esp/esp-idf/components/json/cJSON -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/atli/Documents/Esp32/Esp32_main=. -fmacro-prefix-map=/home/atli/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/atli/Documents/Esp32/Esp32_main/main/main.c
/home/atli/Documents/Esp32/Esp32_main/main/main.c: In function 'app_main':
/home/atli/Documents/Esp32/Esp32_main/main/main.c:408:50: error: unterminated argument list invoking macro "ESP_LOGI"
  408 |     ESP_LOGI(TAG, "System initialized. Mode: %s",
      |                                                  ^
/home/atli/Documents/Esp32/Esp32_main/main/main.c:408:5: error: 'ESP_LOGI' undeclared (first use in this function)
  408 |     ESP_LOGI(TAG, "System initialized. Mode: %s",
      |     ^~~~~~~~
/home/atli/Documents/Esp32/Esp32_main/main/main.c:408:5: note: each undeclared identifier is reported only once for each function it appears in
/home/atli/Documents/Esp32/Esp32_main/main/main.c:408:13: error: expected ';' at end of input
  408 |     ESP_LOGI(TAG, "System initialized. Mode: %s",
      |             ^
      |             ;
/home/atli/Documents/Esp32/Esp32_main/main/main.c:408:5: error: expected declaration or statement at end of input
  408 |     ESP_LOGI(TAG, "System initialized. Mode: %s",
      |     ^~~~~~~~
ninja: build stopped: subcommand failed.
